[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nam-integration-tests"
description = "Integration tests for Neural Amp Modeler trainer and core"
readme = "README.md"
license = {file = "LICENSE"}
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = [".", "test"]
