[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "nam-integration-tests"
description = "Integration tests for Neural Amp Modeler trainer and core"
readme = "README.md"
license = {file = "LICENSE"}
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "torch",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = [".", "test"]
